[package]
name = "tidescli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8.1"
clap = { version = "4.1.13", features = ["derive"] }
fuzzy_finder = "0.3.2"
reqwest = { version = "0.11.15", features = ["blocking"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_repr = "0.1.12"
