[package]
name = "rjw-uktides"
version = "0.5.0"
authors = ["Rob Wells <rob@robjwells.com>"]
edition = "2024"
description = "Rust bindings to the UK Hydrographic Office public EasyTide service."
repository = "https://github.com/robjwells/rjw-uktides"
license = "MIT"

[[bin]]
name = "tides"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
jiff = { version = "0.2.14", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "3.0"
url = "2.5"
