[package]
name = "rjw-uktides"
version = "0.6.0"
authors = ["Rob Wells <rob@robjwells.com>"]
edition = "2024"
description = "Rust bindings to the UK Hydrographic Office public EasyTide service."
repository = "https://github.com/robjwells/rjw-uktides"
license = "MIT OR Apache-2.0"
default-run = "tides"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:ureq"]

[[bin]]
name = "tides"
path = "src/bin/tides/mod.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
jiff = { version = "0.2.14", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.0", optional = true }
url = "2.5"

[dev-dependencies]
ureq = "3.0"
anyhow = "1.0.99"
